refactor(audio): 优化音频相似度计算逻辑及静音处理
- 调整相似度阈值和新增欧氏距离阈值，增强匹配判定准确性
- 实现音频数据标准化方法，提高特征一致性
- 优化WAV文件读取，加入静音裁剪并改进PCM字节转float细节
- 新增余弦相似度和欧氏距离计算函数，丰富特征比较方式
- 改造相似度判定方法，结合余弦相似度与欧氏距离进行综合判断
- 从深度学习模型加载路径中切换至新模型文件，支持JIT引擎
- 提升语音监听缓冲区大小并改进语音活动检测逻辑，减少误判
- 增加记录上次说话时间，实现不活动时强制停止录音匹配
- 修复测试示例中模型路径及日志输出，完善相似度与距离结果展示
- 删除不再使用的DTW算法相关代码，简化项目依赖
- 统一静音裁剪的静音阈值并优化边界处理逻辑
- 调整录音流程，取消静音数据保存，确保录音完整性
- VoiceTrigger增加游戏暂停时自动停止/启动语音监听，提升用户体验
- 修正部分文件存在性判断逻辑，避免潜在空指针异常风险